--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -73,15 +73,21 @@ android {
         def SCHEDULING_BASE = "SCHEDULING_BASE"
 
         def TEALIUM_ENVIRONMENT = "TEALIUM_ENVIRONMENT"
-        def ENVIRONMENT_RELEASE = "prod"
-        def ENVIRONMENT_STAGE = "qa"
-        def ENVIRONMENT_DEBUG = "qa"
-        def ENVIRONMENT_DEV = "dev"
+        def ENVIRONMENT_RELEASE = "\"prod\""
+        def ENVIRONMENT_STAGE = "\"qa\""
+        def ENVIRONMENT_DEBUG = "\"qa\""
+        def ENVIRONMENT_DEV = "\"dev\""
+        def TEALIUM_APP_NAME = "TEALIUM_APP_NAME"
+        def APP_NAME_RELEASE = "\"My Home App - Digital Home\""
+        def APP_NAME_STAGE = "\"My Home App - Digital Home - QA\""
+        def APP_NAME_DEBUG = "\"My Home App - Digital Home - QA\""
+        def APP_NAME_DEV = "\"My Home App - Digital Home - Dev\""
 
         release {
             HOCKEYAPP_APP_ID = "\"19a9fa384bab4246a43242776eb80453\""
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
             buildConfigField STRING, TEALIUM_ENVIRONMENT, ENVIRONMENT_RELEASE
+            buildConfigField STRING, TEALIUM_APP_NAME, APP_NAME_RELEASE
             buildConfigField BOOLEAN, REPORT_LOGS, FALSE
             buildConfigField BOOLEAN, REPORT_CRASHES, TRUE
             buildConfigField BOOLEAN, REPORT_ANALYTICS, TRUE
@@ -119,6 +125,7 @@ android {
             HOCKEYAPP_APP_ID = "\"19a9fa384bab4246a43242776eb80453\""
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
             buildConfigField STRING, TEALIUM_ENVIRONMENT, ENVIRONMENT_STAGE
+            buildConfigField STRING, TEALIUM_APP_NAME, APP_NAME_STAGE
             buildConfigField BOOLEAN, REPORT_LOGS, FALSE
             buildConfigField BOOLEAN, REPORT_CRASHES, TRUE
             buildConfigField BOOLEAN, REPORT_ANALYTICS, TRUE
@@ -156,6 +163,7 @@ android {
             HOCKEYAPP_APP_ID = "\"b51e6a79f705472fb7613985e9f82e7f\""
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
             buildConfigField STRING, TEALIUM_ENVIRONMENT, ENVIRONMENT_DEBUG
+            buildConfigField STRING, TEALIUM_APP_NAME, APP_NAME_DEBUG
             buildConfigField BOOLEAN, REPORT_LOGS, TRUE
             buildConfigField BOOLEAN, REPORT_CRASHES, TRUE
             buildConfigField BOOLEAN, REPORT_ANALYTICS, TRUE
@@ -184,6 +192,7 @@ android {
         developer {
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
             buildConfigField STRING, TEALIUM_ENVIRONMENT, ENVIRONMENT_DEV
+            buildConfigField STRING, TEALIUM_APP_NAME, APP_NAME_DEV
             buildConfigField BOOLEAN, REPORT_LOGS, TRUE
             buildConfigField BOOLEAN, REPORT_CRASHES, FALSE
             buildConfigField BOOLEAN, REPORT_ANALYTICS, FALSE
