--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -75,8 +75,6 @@ android {
     }
 
     buildTypes {
-        def SDKSTRING = "string"
-        def SDKBOOLEAN = "bool"
         def STRING = "String"
         def BOOLEAN = "boolean"
         def TRUE = "true"
@@ -172,6 +170,16 @@ android {
             buildConfigField STRING, "P_GRANT_TYPE_AUTH", "\"authorization_code\""
             buildConfigField STRING, "P_GRANT_TYPE_REFRESH", "\"refresh_token\""
 
+            //AWSDK
+            buildConfigField STRING, AWSDKURL, "\"https://sdk.myonlinecare.com\""
+            buildConfigField STRING, AWSDKKEY, "\"8ff96c2a\""
+            buildConfigField BOOLEAN, ENABLEAUTH, FALSE
+            buildConfigField STRING, AUTHTOKEN, "\"at1001\""
+            buildConfigField STRING, AUTHURL, "\"api.samsungosp.com\""
+            buildConfigField BOOLEAN, SDKSAMPLE_SHOW_SERVER_FIELDS_ON_LOGIN, TRUE
+            buildConfigField BOOLEAN, SDKSAMPLE_FORCE_PORTRAIT, FALSE
+            buildConfigField BOOLEAN, AWSDK_ENABLE_DEBUG_LOGGING, TRUE
+
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -232,16 +240,14 @@ android {
             buildConfigField STRING, "P_GRANT_TYPE_REFRESH", "\"refresh_token\""
 
             //AWSDK
-            def localHost = InetAddress.getLocalHost().getCanonicalHostName()
-//            resValue SDKSTRING, AWSDKURL, "https://stagingoc201.mytelehealth.com"
-            resValue SDKSTRING, AWSDKURL, "https://sdk.myonlinecare.com"  //TODO: Dev working url
-            resValue SDKSTRING, AWSDKKEY, "8ff96c2a"
-            resValue SDKBOOLEAN, ENABLEAUTH, "false"
-            resValue SDKSTRING, AUTHTOKEN, "at1001"
-            resValue SDKSTRING, AUTHURL, "api.samsungosp.com"
-            resValue SDKBOOLEAN, SDKSAMPLE_SHOW_SERVER_FIELDS_ON_LOGIN, TRUE
-            resValue SDKBOOLEAN, SDKSAMPLE_FORCE_PORTRAIT, FALSE
-            resValue SDKBOOLEAN, AWSDK_ENABLE_DEBUG_LOGGING, TRUE
+            buildConfigField STRING, AWSDKURL, "\"https://sdk.myonlinecare.com\""
+            buildConfigField STRING, AWSDKKEY, "\"8ff96c2a\""
+            buildConfigField BOOLEAN, ENABLEAUTH, FALSE
+            buildConfigField STRING, AUTHTOKEN, "\"at1001\""
+            buildConfigField STRING, AUTHURL, "\"api.samsungosp.com\""
+            buildConfigField BOOLEAN, SDKSAMPLE_SHOW_SERVER_FIELDS_ON_LOGIN, TRUE
+            buildConfigField BOOLEAN, SDKSAMPLE_FORCE_PORTRAIT, FALSE
+            buildConfigField BOOLEAN, AWSDK_ENABLE_DEBUG_LOGGING, TRUE
 
             //minifyEnabled true
             //shrinkResources true
@@ -305,14 +311,14 @@ android {
 
             //AWSDK
             //TODO These are just Debug's values. Need to get values for Stage/Prod (IoT?)
-            resValue SDKSTRING, AWSDKURL, "https://sdk.myonlinecare.com"
-            resValue SDKSTRING, AWSDKKEY, "8ff96c2a"
-            resValue SDKBOOLEAN, ENABLEAUTH, "false"
-            resValue SDKSTRING, AUTHTOKEN, "at1001"
-            resValue SDKSTRING, AUTHURL, "api.samsungosp.com"
-            resValue SDKBOOLEAN, SDKSAMPLE_SHOW_SERVER_FIELDS_ON_LOGIN, TRUE
-            resValue SDKBOOLEAN, SDKSAMPLE_FORCE_PORTRAIT, FALSE
-            resValue SDKBOOLEAN, AWSDK_ENABLE_DEBUG_LOGGING, TRUE
+            buildConfigField STRING, AWSDKURL, "\"https://sdk.myonlinecare.com\""
+            buildConfigField STRING, AWSDKKEY, "\"8ff96c2a\""
+            buildConfigField BOOLEAN, ENABLEAUTH, FALSE
+            buildConfigField STRING, AUTHTOKEN, "\"at1001\""
+            buildConfigField STRING, AUTHURL, "\"api.samsungosp.com\""
+            buildConfigField BOOLEAN, SDKSAMPLE_SHOW_SERVER_FIELDS_ON_LOGIN, TRUE
+            buildConfigField BOOLEAN, SDKSAMPLE_FORCE_PORTRAIT, FALSE
+            buildConfigField BOOLEAN, AWSDK_ENABLE_DEBUG_LOGGING, TRUE
 
             signingConfig signingConfigs.config
             debuggable true
