--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -72,8 +72,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 25
         multiDexEnabled true
-        versionCode 105002
-        versionName "1.5.2"
+        versionCode 105003
+        versionName "1.5.3"
         setProperty("archivesBaseName", "DignityHealth-MyHome-$versionName")
 
         manifestPlaceholders = [HOCKEYAPP_APP_ID: HOCKEYAPP_APP_ID]
@@ -247,8 +247,8 @@ android {
             buildConfigField STRING, "P_GRANT_TYPE_REFRESH", "\"refresh_token\""
 
             //AWSDK
-            buildConfigField STRING, AWSDKURL, IOT_AWSDK_URL
-            buildConfigField STRING, AWSDKKEY, IOT_AWSDK_KEY
+            buildConfigField STRING, AWSDKURL, DEV_AWSDK_URL
+            buildConfigField STRING, AWSDKKEY, DEV_AWSDK_KEY
             buildConfigField BOOLEAN, ENABLEAUTH, FALSE
             buildConfigField STRING, AUTHTOKEN, "\"at1001\""
             buildConfigField STRING, AUTHURL, "\"api.samsungosp.com\""
