--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -309,8 +309,8 @@ android {
             buildConfigField STRING, "P_GRANT_TYPE_REFRESH", PROD_GRANT_TYPE_REFRESH
 
             //AWSDK
-            buildConfigField STRING, AWSDKURL, DEV_AWSDK_URL
-            buildConfigField STRING, AWSDKKEY, DEV_AWSDK_KEY
+            buildConfigField STRING, AWSDKURL, IOT_AWSDK_URL
+            buildConfigField STRING, AWSDKKEY, IOT_AWSDK_KEY
             buildConfigField BOOLEAN, ENABLEAUTH, FALSE
             buildConfigField STRING, AUTHTOKEN, "\"at1001\""
             buildConfigField STRING, AUTHURL, "\"api.samsungosp.com\""
